# gopro2zed

./: README.md  pyproject.toml
example_config/: zed_calibration.yaml
gopro2zed/: __init__.py  cli.py  core.py
gopro2zed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
